# Python_Web_07

./: main.py  my_select.py  pyproject.toml  pyvenv.cfg  seeds.py
database/: repository.py
migrations/versions/: 49af7c186380_init.py
