[tool.poetry]
name = "module07"
version = "0.1.0"
description = ""
authors = ["tetianakondra <tatjana.ukon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
faker = "^18.3.2"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
